--- a/styles/bilibili/catppuccin.user.less
+++ b/styles/bilibili/catppuccin.user.less
@@ -237,11 +237,13 @@
     .bili-header__channel .channel-link{
         background-color: @surface0 !important; // Channel navigation background | 分区栏目背景
         color: @text !important;  // Text color | 文字颜色
+        border-color: @surface1 !important; // Border color | 边框颜色
     }
 
     .bili-header__channel .channel-link:hover{
         background-color: @surface1 !important; // Channel navigation hover background | 分区栏目悬停背景
         color: @accent !important; // Hover text uses accent | 悬停文字使用强调色
+        border-color: @surface2 !important; // Hover border color | 悬停边框颜色
     }
     .channel-entry-more__link{//分区栏目"更多"
         background-color: @surface0 !important; /* Subtle background | 淡色背景 */
@@ -1158,7 +1160,9 @@
     fill: @mauve !important;
     stroke: @mauve !important;
    }
-
+   .floor-card[data-v-d632646a]{
+    border: 1px solid @base !important //叠放窗口边框
+   }
 
   }
 }
