--- a/styles/poe/catppuccin.user.less
+++ b/styles/poe/catppuccin.user.less
@@ -1,5 +1,5 @@
 /* ==UserStyle==
-@name poe Catppuccin
+@name Poe Catppuccin
 @namespace github.com/catppuccin/userstyles/styles/poe
 @homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/poe
 @version 2000.01.01
