--- a/styles/poe/catppuccin.user.less
+++ b/styles/poe/catppuccin.user.less
@@ -5,7 +5,7 @@
 @version 2000.01.01
 @updateURL https://github.com/catppuccin/userstyles/raw/main/styles/poe/catppuccin.user.less
 @supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3Apoe
-@description Soothing pastel theme for poe
+@description Soothing pastel theme for Poe
 @author Catppuccin
 @license MIT
 
