Change to CSS variables
Co-authored-by: uncenter <uncenter@uncenter.dev>

--- a/styles/poe/catppuccin.user.less
+++ b/styles/poe/catppuccin.user.less
@@ -38,137 +38,19 @@
     #lib.palette();
     #lib.defaults();
 
-    background-color: @base;
-
-    .MainColumn_scrollSection__A9NHB,
-    .ChatMessagesScrollWrapper_scrollableContainerWrapper__x8H60,
-    .ChatPageMainFooter_footerWrapper__RH5Dq,
-    .SettingsPageMain_container__gnsBW,
-    div.ChatHomeMain_centered__SoOYo,
-    .BotCreationFlowTypeSelector_wrapper__owYL7,
-    .MainColumn_column__UEunw > div,
-    section.LeaderboardPageColumn_leaderboardSection__nvtNc:nth-child(2) > div:nth-child(1) > *,
-    section.LeaderboardPageColumn_leaderboardSection__nvtNc:nth-child(2) > div:nth-child(2) > div:nth-child(2) > div:nth-child(1) > svg:nth-child(1),
-    section.LeaderboardPageColumn_leaderboardSection__nvtNc:nth-child(3) > div:nth-child(1) > h2:nth-child(1),
-    section.LeaderboardPageColumn_leaderboardSection__nvtNc:nth-child(3) > div:nth-child(1) > p:nth-child(2),
-    section.LeaderboardPageColumn_leaderboardSection__nvtNc:nth-child(3) > div:nth-child(2) > div:nth-child(2) > div:nth-child(1) > svg:nth-child(1) {
-        background-color: @base !important;
-        color: @text;
-    }
-
-    .BaseNavbar_leftNavItem__dm85A,
-    .SidebarHeader_headerBar__3sK8Z,
-    .ChatHeader_boldTitle__TK9mB,
-    .BaseNavbar_chatTitleNavbar__JROLE,
-    .Modal_header__9MUIZ,
-    .CanvasHeader_header__m3nlt,
-    .BaseNavbar_navbar__IqOxl,
-    .Sidebar_sidebar_content__btxqS {
-        background-color: @mantle !important;
-    }
-
-    /* MESSAGE BUBBLES */
-    .Message_leftSideMessageBubble__VPdk6,
-    .MainLeftSidebar_sidebar__C6HpK > * > * {
-        background-color: @mantle;
-    }
-
-    .Message_rightSideMessageBubble__ioa_i {
-        background-color: fade(@blue, 20%);
-    }
-
-    .Message_viewMoreButtonContainer__QTl_p {
-        background-image: linear-gradient(to bottom, transparent, @mantle);
-    }
-
-    .Message_leftSideOptimisticFooter__3sP0D {
-        color: @lavender !important;
-    }
-
-    /* BUTTONS */
-    button.button_root__TL8nv,
-    a.button_secondary___dIDW,
-    div.ExploreBotsCategories_categoriesRow__dfCjY > *,
-    section.LeaderboardPageColumn_leaderboardSection__nvtNc:nth-child(2) > button:nth-child(4),
-    section.LeaderboardPageColumn_leaderboardSection__nvtNc:nth-child(3) > button:nth-child(4) {
-        color: @text !important;
-        background-color: @mantle !important;
-    }
-
-    button.button_root__TL8nv:hover,
-    a.button_ghost__YsMI5:hover,
-    a.button_secondary___dIDW:hover,
-    div.ExploreBotsCategories_categoriesRow__dfCjY > *:hover {
-        background-color: @base !important;
-        color: @pink !important;
-        outline-color: @pink !important;
-    }
-
-    .button_primary__Vo3KL {
-        background-color: @blue !important;
-        color: @crust !important;
-    }
-
-    button.button_danger__r1Nkg {
-        background-color: transparent !important;
-        color: @red !important;
-    }
-
-    /* CARDS & INPUTS */
-    li.SidebarCard_item__Hbnmq,
-    .BotInfoCard_sectionContainer__S96Qf,
-    .ChatInviteCard_inviteCard__LFuuI,
-    .WebSubscriptionPaywall_footerInner__kUWld,
-    .BotCreationFlowTypeSelector_cell__91gTX,
-    .PreviewOverlayLayout_wrapper__zxNOk,
-    section.LeaderboardPageColumn_leaderboardSection__nvtNc > * > * {
-        background-color: @surface0;
-    }
-
-    .BotDescriptionDisclaimerSection_text__sIeXQ {
-        background-color: @mantle;
-        color: @text;
-        border-color: transparent;
-    }
-
-    .ChatMessageInputContainer_inputContainer__s2AGa {
-        background-color: @mantle;
-        border-color: @surface0;
-        color: @text;
-        outline-color: @mantle !important;
-    }
-
-    .UserProfileHeader_container__6EslS,
-    .MainColumn_scrollSection__A9NHB > * > * {
-        background-color: @surface0 !important;
-    }
-
-    .tab_tabs__fbjCM,
-    .SettingsPageMain_container__gnsBW > div:nth-child(2),
-    .SettingsDeviceSection_contentContainer__OkFjA {
-        background-color: @crust;
-    }
-
-    /* CODE BLOCKS */
-    div[class^="MarkdownCodeBlock_container__"] {
-        background-color: @mantle;
-        border-color: @surface0;
-    }
-
-    div[class^="MarkdownCodeBlock_codeBlock__"], pre, code {
-        background-color: @crust !important;
-        color: @text;
-    }
-
-    :not(pre) > code {
-        background-color: @surface0 !important;
-        color: @text;
-    }
-
-    /* ALERTS */
-    .Banner_error__PzPnP {
-        background-color: @red !important;
-        color: @crust;
-    }
+    --pdl-bg-base: @mantle;
+    --pdl-bg-faint: @base;
+    --pdl-bg-muted: @surface0;
+    --pdl-bg-subtle: @surface1;
+    
+    --pdl-fg-base: @text;
+    --pdl-fg-muted: @subtext1;
+    --pdl-fg-subtle: @subtext0;
+    
+    --pdl-border-base: @surface1;
+    
+    --pdl-accent-base: @accent;
+    --pdl-accent-on-accent: @base;
+    --pdl-fg-white: @base;
   }
 }
