--- a/lib/m3.less
+++ b/lib/m3.less
@@ -68,9 +68,9 @@
 
     // Elevation scale
     .token(surface-container-lowest, @crust);
-    .token-content(surface, @mantle, @text);
     .token(surface-dim, @mantle);
-    .token(surface-container-low, @base);
+    .token(surface-container-low, lighten(@base, if(@flavor = latte, -5%, 5%)));
+    .token-content(surface, @base, @text);
     .token(surface-container, @surface0);
     .token(surface-container-high, @surface1);
     .token(surface-container-highest, @surface2);
@@ -92,7 +92,7 @@
     .token(shadow, @m3-black);
     
     // Deprecated
-    .token-content(background, @mantle, @text);
+    .token-content(background, @base, @text);
     .token(surface-tint, @mauve);
   }
 }
