fix(chatgpt): misc

--- a/styles/chatgpt/catppuccin.user.less
+++ b/styles/chatgpt/catppuccin.user.less
@@ -37,6 +37,7 @@
       --text-primary: @text;
       --text-secondary: @subtext1;
       --text-tertiary: @subtext0;
+      --text-quaternary: @overlay2;
       --bg-primary: @base;
       --bg-secondary: @surface0;
       --bg-tertiary: @surface1;
@@ -58,6 +59,7 @@
 
       --theme-user-msg-bg: @surface0;
       --theme-submit-btn-bg: @accent;
+      --theme-submit-btn-text: @base;
 
       --theme-secondary-btn-bg: @surface1;
       --theme-secondary-btn-text: @text;
@@ -152,6 +154,7 @@
       }
 
       .__tailwind-utility(green, 600, @green); // confirmation toasts
+      .__tailwind-utility(red, 500, @red); // failure toasts
       .__tailwind-utility(blue, 400, @accent); // toggled checkmarks
       .__tailwind-utility(gray, 600, @overlay0); // untoggled checkmarks
       .__tailwind-utility(gray, 500, @overlay2); // faint text in/and dividers
