refactor(chatgpt): rename utility argument names to fix linter bug

--- a/styles/chatgpt/catppuccin.user.less
+++ b/styles/chatgpt/catppuccin.user.less
@@ -136,20 +136,20 @@
       }
 
       /* Tailwind Utilities */
-      .__tailwind-utility(@name, @shade, @color) {
-        .text-@{name}-@{shade},
-        .dark\:text-@{name}-@{shade} {
-          color: @color;
+      .__tailwind-utility(@color, @shade, @value) {
+        .text-@{color}-@{shade},
+        .dark\:text-@{color}-@{shade} {
+          color: @value;
         }
-        .bg-@{name}-@{shade},
-        .dark\:bg-@{name}-@{shade} {
-          background-color: @color;
+        .bg-@{color}-@{shade},
+        .dark\:bg-@{color}-@{shade} {
+          background-color: @value;
         }
-        .border-@{name}-@{shade} {
-          border-color: @color;
+        .border-@{color}-@{shade} {
+          border-color: @value;
         }
-        .radix-state-checked\:bg-@{name}-@{shade}[data-state="checked"] {
-          background-color: @color;
+        .radix-state-checked\:bg-@{color}-@{shade}[data-state="checked"] {
+          background-color: @value;
         }
       }
 
