fix(poe): settings, tooltips, codes, misc

--- a/styles/poe/catppuccin.user.less
+++ b/styles/poe/catppuccin.user.less
@@ -18,7 +18,7 @@
 @import "https://userstyles.catppuccin.com/lib/lib.less";
 
 @-moz-document domain("poe.com") {
-  :root {
+  :root:not(.dark, .light) {
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
     }
@@ -27,10 +27,10 @@
     }
   }
 
-  :root[data-theme="dark"] {
+  :root.dark {
     #catppuccin(@darkFlavor);
   }
-  :root[data-theme="light"] {
+  :root.light {
     #catppuccin(@lightFlavor);
   }
 
@@ -47,10 +47,40 @@
     --pdl-fg-muted: @subtext1;
     --pdl-fg-subtle: @subtext0;
     
+    --pdl-bg-reverse: @text;
+    --pdl-fg-reverse: @base;
+    
     --pdl-border-base: @surface1;
+    --pdl-border-emphasis: @overlay0;
     
     --pdl-accent-base: @accent;
     --pdl-accent-on-accent: @base;
     --pdl-fg-white: @base;
+    
+    --code-block-bg: @base;
+    
+    --pdl-error-base: @red;
+    
+    --pdl-success-base: @green;
+    --pdl-success-on-success: @base;
+    
+    // Settings
+    --pdl-action-default-bg: @mantle;
+    --pdl-action-disabled-bg: @surface0;
+    --pdl-action-default-border: @surface2;
+    --pdl-action-hover-border: @overlay0;
+    --pdl-action-default-fg: @text;
+    --pdl-action-disabled-fg: @overlay2;
+    --violet-9: @accent;
+    --violet-11: @accent;
+    
+    textarea {
+      color: @text;
+    }
+    
+    [class^="Tooltip_root"] {
+      --pdl-tooltip-bg: @crust;
+      --pdl-tooltip-color: @text;
+    }
   }
 }
