--- a/styles/poe/catppuccin.user.less
+++ b/styles/poe/catppuccin.user.less
@@ -27,11 +27,13 @@
     }
   }
 
-  :root.dark {
-    #catppuccin(@darkFlavor);
-  }
-  :root.light {
-    #catppuccin(@lightFlavor);
+  :root {
+    &.dark {
+      #catppuccin(@darkFlavor);
+    }
+    &.light {
+      #catppuccin(@lightFlavor);
+    }
   }
 
   #catppuccin(@flavor) {
