--- a/styles/poe/catppuccin.user.less
+++ b/styles/poe/catppuccin.user.less
@@ -79,6 +79,11 @@
     textarea {
       color: @text;
     }
+
+    button.Button_buttonBase__Bv9Vx {
+		  background: @accent !important;
+		  color: @crust !important;
+	  }
     
     [class^="Tooltip_root"] {
       --pdl-tooltip-bg: @crust;
