Change 'Tooltip_root' BG to surface0 to show elevation

--- a/styles/poe/catppuccin.user.less
+++ b/styles/poe/catppuccin.user.less
@@ -86,7 +86,7 @@
 	  }
     
     [class^="Tooltip_root"] {
-      --pdl-tooltip-bg: @crust;
+      --pdl-tooltip-bg: @surface0;
       --pdl-tooltip-color: @text;
     }
   }
