Err, add theming for git diff table.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -101,9 +101,9 @@
       }
     }
 
-      a.active {
-        background-color: @surface0 !important;
-      }
+    a.active {
+      background-color: @surface0 !important;
+    }
 
     li {
       a {
@@ -547,7 +547,7 @@
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
     }
-    
+
     @media (prefers-color-scheme: dark) {
       #catppuccin(@darkFlavor);
     }
@@ -594,13 +594,74 @@
       background-color: @mantle !important;
     }
 
-    table.diffstat td.graph td.add {
-      background-color: @green !important;
-      color: @surface0 !important;
+    table.tabs {
+      border-color: @blue !important;
+
+      tr td {
+        background-color: @surface0 !important;
+        &:hover {
+          background: @surface0 !important;
+        }
+      }
+
+      .active {
+        color: @base !important;
+        background-color: @blue !important;
+      }
     }
-    table.diffstat td.graph td.rem {
-      background-color: @red !important;
-      color: @surface0 !important;
+
+    table#header {
+      tr td {
+        background-color: @base !important;
+        border-color: @overlay0 !important;
+
+        &:hover {
+          background-color: @base !important;
+        }
+      }
+    }
+
+    table.diffstat td.graph {
+      td.add {
+        background-color: @green !important;
+        color: @surface0 !important;
+      }
+
+      td.upd {
+        background-color: @blue !important;
+        color: @surface0 !important;
+      }
+
+      td.rem {
+        background-color: @red !important;
+        color: @surface0 !important;
+      }
+    }
+
+    table.diff {
+      background-color: @mantle !important;
+
+      &:hover {
+        background-color: @mantle !important;
+      }
+
+      td {
+        .head {
+          color: @blue !important;
+        }
+
+        .hunk {
+          color: @peach !important;
+        }
+
+        .add {
+          color: @green !important;
+        }
+
+        .del {
+          color: @red !important;
+        }
+      }
     }
 
     .stats tr td.sum {
@@ -608,7 +669,7 @@
     }
 
     .edited {
-      color: @subtext0;
+      color: @subtext0 !important;
     }
 
     #cgit {
@@ -634,22 +695,20 @@
         *****************************************************************/
 
         /* deno-fmt-ignore */
-        span {
-          &.num { color: @peach !important; }    /* Numerics */
-          &.esc { color: @pink !important; }     /* Escape Codes */
-          &.sng { color: @green !important; }    /* Strings */
-          &.pps { color: @maroon !important; }   /* Pre-Processor Strings */
-          &.slc { color: @overlay2 !important; } /* Single-Line Comments */
-          &.com { color: @overlay2 !important; } /* All Other Comments */
-          &.ppc { color: @teal !important; }     /* All Other Pre-Processor */
-          &.opt { color: @sky !important; }      /* Operators */
-          &.ipl { color: @blue !important; }     /* String Interpolation */
-          &.lin { color: @surface2 !important; } /* Line Numbers */
-          &.kwa { color: @text !important; }     /* Keyword Group a - Keys? */
-          &.kwb { color: @blue !important; }     /* Keyword Group b - Parameters? */
-          &.kwc { color: @mauve !important; }    /* Keyword Group c - Commands */
-          &.kwd { color: @maroon !important; }   /* Keyword Group d - Symbols */
-        }
+        .num { color: @peach !important; }    /* Numerics */
+        .esc { color: @pink !important; }     /* Escape Codes */
+        .sng { color: @green !important; }    /* Strings */
+        .pps { color: @maroon !important; }   /* Pre-Processor Strings */
+        .slc { color: @overlay2 !important; } /* Single-Line Comments */
+        .com { color: @overlay2 !important; } /* All Other Comments */
+        .ppc { color: @teal !important; }     /* All Other Pre-Processor */
+        .opt { color: @sky !important; }      /* Operators */
+        .ipl { color: @blue !important; }     /* String Interpolation */
+        .lin { color: @surface2 !important; } /* Line Numbers */
+        .kwa { color: @text !important; }     /* Keyword Group a - Keys? */
+        .kwb { color: @blue !important; }     /* Keyword Group b - Parameters? */
+        .kwc { color: @mauve !important; }    /* Keyword Group c - Commands */
+        .kwd { color: @maroon !important; }   /* Keyword Group d - Symbols */
       }
     }
   }
@@ -1241,16 +1300,15 @@
     --archwiki-template-tip-background-color: @surface0 !important;
     --archwiki-template-tip-border-color: @teal !important;
 
-    /* The following variables below have been deprecated in replacement for newer variables above.
-     * --archwiki-template-highlight-background-color: @surface0 !important;
-     * --archwiki-template-highlight-border-color: @peach !important;
-     */
-
     /* Navigation Bar (bottom of page, links to other articles within the group) */
     --archwiki-template-navigation-background-color: @mantle !important;
     --archwiki-template-navigation-border-color: @overlay0 !important;
 
-    /* Meta-related Messages */
+    /* Editor-Specific Meta-related Notes */
+    --archwiki-template-highlight-background-color: @surface0 !important;
+    --archwiki-template-highlight-border-color: @yellow !important;
+
+    /* All Other Meta-related Messages */
     --archwiki-template-message-background-color: @surface0 !important;
     --archwiki-template-message-border-color: @blue !important;
 
