fix(poe): use variable instead

--- a/styles/poe/catppuccin.user.less
+++ b/styles/poe/catppuccin.user.less
@@ -80,14 +80,12 @@
       color: @text;
     }
 
-    button.Button_buttonBase__Bv9Vx {
-		  background: @accent !important;
-		  color: @crust !important;
-	  }
-    
     [class^="Tooltip_root"] {
       --pdl-tooltip-bg: @surface0;
       --pdl-tooltip-color: @text;
     }
+
+    // Login
+    --fg-base--ignore-light-mode: @text;
   }
 }
