--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -19,7 +19,7 @@
 @import "http://127.0.0.1:8000/lib/mediawiki.less";
 
 /* deno-fmt-ignore */
-@-moz-document regexp("^https:\\/\\/(?:[-a-zA-Z0-9@:%_+.~#?&\\/=]*\\.)?(?<!gitlab\\.)archlinux\\.org\\/?[-a-zA-Z0-9@:%_+.~#?&\\/=]*") {
+@-moz-document regexp("^https:\\/\\/(?!gitlab\\.)(\\w+\\.)*archlinux\\.org(?:\\/\\w*)+") {
   :root {
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
@@ -472,7 +472,7 @@
 }
 
 /* deno-fmt-ignore */
-@-moz-document regexp("^https:\\/\\/archlinux\\.org\\/(?!packages\\/)[-a-zA-Z0-9@:%_+.~#?&\\/=]*") {
+@-moz-document regexp("^https:\\/\\/(?!gitlab\\.)(\\w+\\.)*archlinux\\.org\\/(?!packages[\\/]?)\\w*") {
   :root {
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
@@ -495,7 +495,7 @@
 }
 
 /* deno-fmt-ignore */
-@-moz-document regexp("^https:\\/\\/archlinux\\.org\\/packages\\/?") {
+@-moz-document regexp("^https:\\/\\/(?!gitlab\\.)(\\w+\\.)*archlinux\\.org\\/(?:packages[\\/]?)\\w*") {
   :root {
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
@@ -540,7 +540,7 @@
 }
 
 /* deno-fmt-ignore */
-@-moz-document regexp("^https:\\/\\/archlinux\\.org\\/?[-a-zA-Z0-9@:%_+.~#?&\\/=]*"), domain("aur.archlinux.org") {
+@-moz-document regexp("^https:\\/\\/(?!gitlab\\.)(\\w+\\.)*archlinux\\.org\\/(?:packages[\\/]?)\\w*"), domain("aur.archlinux.org") {
   :root {
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
