--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -540,7 +540,7 @@
 }
 
 /* deno-fmt-ignore */
-@-moz-document regexp("^https:\\/\\/(?!gitlab\\.)(\\w+\\.)*archlinux\\.org\\/(?:packages[\\/]?)\\w*"), domain("aur.archlinux.org") {
+@-moz-document url-prefix("https://archlinux.org/packages"), domain("aur.archlinux.org") {
   :root {
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
