part 2 catppuccin.user.less
Co-authored-by: uncenter <uncenter@uncenter.dev>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -495,7 +495,7 @@
 }
 
 /* deno-fmt-ignore */
-@-moz-document regexp("^https:\\/\\/(?!gitlab\\.)(\\w+\\.)*archlinux\\.org\\/(?:packages[\\/]?)\\w*") {
+@-moz-document url-prefix("https://archlinux.org/packages") {
   :root {
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
