Typo fixes on the latest regex issue.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -19,7 +19,7 @@
 @import "http://127.0.0.1:8000/lib/mediawiki.less";
 
 /* deno-fmt-ignore */
-@-moz-document regexp("^https:\\/\\/(?!gitlab\\.)(\\w+\\.)*archlinux\\.org(?:\\/\\w*)+") {
+@-moz-document regexp("^https:\\/\\/(?!gitlab\\.)(.+\\.)*archlinux\\.org(?:\\/.*)+") {
   :root {
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
@@ -471,7 +471,7 @@
 }
 
 /* deno-fmt-ignore */
-@-moz-document regexp("^https:\\/\\/(?!gitlab\\.)(\\w+\\.)*archlinux\\.org\\/(?!packages[\\/]?)\\w*") {
+@-moz-document regexp("^https:\\/\\/(?!gitlab\\.)(.+\\.)*archlinux\\.org\\/(?!packages\\/?).*") {
   :root {
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
