Quickly move around some stuff in brdmenu. Fix up stats. Gotta go fast! Gotta do mixins next.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -262,7 +262,7 @@
       }
 
       &:active, &:enabled {
-        background-color: fade(@overlay2, 30%) !important;
+        background-color: @surface2 !important;
         border-color: @overlay0 !important;
       }
     }
@@ -307,7 +307,7 @@
       }
 
       &:active {
-        background-color: fade(@overlay2, 30%) !important;
+        background-color: @surface2 !important;
         border-color: @overlay0 !important;
       }
     }
@@ -328,7 +328,7 @@
       }
 
       &:active, &:checked {
-        background-color: fade(@overlay2, 30%) !important;
+        background-color: @surface2 !important;
         border-color: @overlay0 !important;
       }
     }
@@ -392,7 +392,7 @@
       }
 
       tr:hover {
-        background-color: fade(@overlay2, 30%) !important;
+        background-color: @surface2 !important;
       }
 
       tr:nth-child(odd) td {
@@ -404,7 +404,7 @@
       }
 
       tr:hover td {
-        background-color: fade(@overlay2, 30%) !important;
+        background-color: @surface2 !important;
       }
     }
 
@@ -847,7 +847,7 @@
 
             &:active {
               color: @sapphire !important;
-              background-color: fade(@overlay2, 30%) !important;
+              background-color: @surface2 !important;
               border-color: @overlay0 !important;
             }
 
@@ -1018,7 +1018,7 @@
         }
 
         &:active, &:enabled {
-          background-color: fade(@overlay2, 30%) !important;
+          background-color: @surface2 !important;
           border-color: @overlay0 !important;
         }
       }
@@ -1041,7 +1041,7 @@
         }
 
         &:active {
-          background-color: fade(@overlay2, 30%) !important;
+          background-color: @surface2 !important;
           border-color: @overlay0 !important;
         }
       }
@@ -1062,7 +1062,7 @@
         }
 
         &:active, &:checked {
-          background-color: fade(@overlay2, 30%) !important;
+          background-color: @surface2 !important;
           border-color: @overlay0 !important;
         }
       }
@@ -1178,26 +1178,22 @@
       #brdmenu {
         &, * {
           background-color: @mantle !important;
-          border-color: @overlay0 !important;
+          border: none !important;
         }
 
         li, .blockmenu {
           a {
             &, &:link {
               color: @blue !important;
-              background-color: inherit;
-              border-color: @surface1 !important;
 
               &:hover {
                 color: @sky !important;
                 background-color: @surface1 !important;
-                border-color: @surface2 !important;
               }
 
               &:active {
                 color: @sapphire !important;
-                background-color: fade(@overlay2, 30%) !important;
-                border-color: @overlay0 !important;
+                background-color: @surface2 !important;
               }
 
               &:visited {
@@ -1214,21 +1210,27 @@
         }
       }
 
-      #brdwelcome {
-        background-color: inherit;
+      #brdstats {
+        color: @subtext0 !important;
+        border-top-color: @overlay0 !important;
 
-        .conl {
-          color: @text !important;
-          border-color: @overlay1 !important;
+        strong {
+          color: @peach !important;
         }
 
-        .conr {
-          color: @subtext0;
-          border-color: @overlay1 !important;
+        #onlinelist strong {
+          color: @subtext0 !important;
         }
       }
 
+      #brdwelcome {
+        color: @subtext0 !important;
+        border-bottom-color: @overlay1 !important;
+      }
+
       #brdmain {
+        border-bottom-color: @overlay1 !important;
+
         a, a.permalink {
           &, &:link {
             color: @blue !important;
@@ -1264,7 +1266,7 @@
 
               &:active {
                 color: @sapphire !important;
-                background-color: fade(@overlay2, 30%) !important;
+                background-color: @surface2 !important;
                 border-color: @overlay0 !important;
               }
 
