feat(regex101): refactor accent tokens into mixin, change colour on acccent to match style guide

--- a/styles/regex101/catppuccin.user.less
+++ b/styles/regex101/catppuccin.user.less
@@ -36,40 +36,51 @@
     
     --primary-color: @base;
     --primary-contrast-color: @accent;
+
     --app-color: @text;
     --app-color-metadata: @subtext0;
     --app-contrast-color: @subtext1;
+
     --link-color: @accent;
+
     --highlight-bg: @green;
     --spinner-bg: @overlay0;
     --bg-0: @mantle;
     --bg-1: @base;
     --content-bg: @surface0;
+
     --content-border-color: @surface1;
     --sub-content-bg: @surface1;
+
     --info-color: @subtext0;
     --success-color: @green;
     --warning-color: @yellow;
     --danger-color: @red;
+
     --misc-button-icon-color: @subtext1;
     --misc-button-bg: @surface1;
     --misc-button-hover-bg: @surface1;
     --misc-button-active-bg: @surface2;
     --misc-button-active-color: @text;
     --misc-button-highlight-bg: fade(@green, 40%);
+
     --editor-active-bg: @overlay1;
     --library-active-bg: fade(@yellow, 40%);
     --account-active-bg: fade(@green, 40%);
     --quiz-active-bg: fade(@teal, 40%);
     --settings-active-bg: fade(@pink, 40%);
+
     #hsl-variables(--button-bg, @surface0);
     #hsl-variables(--button-ok-bg, @mantle);
+
     --button-hover-l: lightness(@surface1);
     --backdrop-bg: fade(@overlay0, 30%);
+
     --input-bg: @base;
     --input-disabled-bg: @mantle;
     --input-border-color: @surface0;
     --input-focused-border-color: @surface0;
+    
     --label-color: @subtext1;
     --tooltip-color: @crust;
     --tooltip-bg: @subtext0;
@@ -77,9 +88,11 @@
     --match-indicator-no-match: fade(@blue, 40%);
     --match-indicator-match-bg: fade(@green, 40%);
     --match-indicator-error-bg: fade(@red, 40%);
+    
     --debugger-backtrack-bg: fade(@red, 40%);
     --debugger-regex-bg: fade(@green, 40%);
     --debugger-slider-bg: @surface2;
+
     --header-discord-color: @lavender;
     --header-twitter-color: @sapphire;
     --header-donate-color: @yellow;
@@ -92,10 +105,12 @@
     --header-info-color: @sky;
     --header-social-color: @green;
     --header-stripe-color: @blue;
+
     --starred-library-entry-bg: fade(@yellow, 10%);
     --cm-whitespace-color: @overlay1;
     --cm-selected-bg: fade(@accent, 50%);
     --cm-inactive-selected-bg: fade(@accent, 30%);
+    
     @match-group-colors: @blue, @green, @yellow, @mauve, @pink, @red, @green;
     each(
       @match-group-colors,
@@ -105,33 +120,33 @@
         --match-group-@{i}-alt: darken(@value, 10%);
       }
     );
+
     --match-highlight-color: fade(@yellow, 90%);
+    
     --explanation-token-bg: fade(@yellow, 80%);
-    --explanation-token-color: @crust;
+    --explanation-token-color: @base;
     --explanation-plain-text-bg: fade(@surface2, 80%);
     --explanation-flag-color: @mauve;
+
     --token-quote-color: @mauve;
     --token-quote-bg: none;
-    --token-meta-bg: @blue;
-    --token-meta-color: @crust;
     --token-escaped-string-color: var(--app-color);
     --token-escaped-string-bg: fade(@overlay1, 20%);
-    --token-char-class-bg: @rosewater;
-    --token-char-class-color: @crust;
-    --token-char-class-meta-bg: @flamingo;
-    --token-subpattern-reference-bg: @mauve;
-    --token-subpattern-reference-color: @crust;
-    --token-group-0-bg: @green;
-    --token-group-0-color: @crust;
-    --token-group-1-bg: @yellow;
-    --token-group-1-color: @crust;
-    --token-group-2-bg: @peach;
-    --token-group-2-color: @crust;
-    --token-group-3-bg: @maroon;
-    --token-group-3-color: @crust;
-    --token-comment-bg: none;
-    --token-error-bg: @red;
-    --token-error-color: @crust;
+    #accent-token(meta, @blue);
+    #accent-token(char-class, @rosewater);
+    #accent-token(char-class-meta, @flamingo);
+    #accent-token(subpattern-reference, @mauve);
+    #accent-token(group-0, @green);
+    #accent-token(group-1, @yellow);
+    #accent-token(group-2, @peach);
+    #accent-token(group-3, @maroon);
+    #accent-token(comment, transparent);
+    #accent-token(error, @red);
+
+    #accent-token(@id, @color) {
+      --token-@{id}-bg: @color;
+      --token-@{id}-color: @base;
+    }
 
     #hsl-variables(@variable, @color) {
       @{variable}-h: hue(@color);
