feat(regex101): theme canvas overlay

--- a/styles/regex101/catppuccin.user.less
+++ b/styles/regex101/catppuccin.user.less
@@ -153,5 +153,10 @@
       @{variable}-s: saturation(@color);
       @{variable}-l: lightness(@color);
     }
+
+    // Canvas is pulling Catppuccin colours from CSS variables, just needs fading for contrast
+    canvas {
+      filter: opacity(0.3);
+    }
   }
 }
