feat(regex101): theme explaination keyword color

--- a/styles/regex101/catppuccin.user.less
+++ b/styles/regex101/catppuccin.user.less
@@ -123,6 +123,7 @@
 
     --match-highlight-color: fade(@yellow, 90%);
     
+    --explanation-keyword-color: @green;
     --explanation-token-bg: fade(@yellow, 80%);
     --explanation-token-color: @base;
     --explanation-plain-text-bg: fade(@surface2, 80%);
