feat(regex101): theme button-danger-bg

--- a/styles/regex101/catppuccin.user.less
+++ b/styles/regex101/catppuccin.user.less
@@ -72,6 +72,7 @@
 
     #hsl-variables(--button-bg, @surface0);
     #hsl-variables(--button-ok-bg, @mantle);
+    #hsl-variables(--button-danger-bg, fade(@red, 30%));
 
     --button-hover-l: lightness(@surface1);
     --backdrop-bg: fade(@overlay0, 30%);
