feat(regex101): change header-twitter-color to text to match X branding

--- a/styles/regex101/catppuccin.user.less
+++ b/styles/regex101/catppuccin.user.less
@@ -95,7 +95,7 @@
     --debugger-slider-bg: @surface2;
 
     --header-discord-color: @lavender;
-    --header-twitter-color: @sapphire;
+    --header-twitter-color: @text;
     --header-donate-color: @yellow;
     --header-contact-color: @green;
     --header-feedback-color: @maroon;
