Perfect the quotebox highlighting on hover! I might be actually godly at this now...knock on wood...
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -35,10 +35,25 @@
     span[background-image="url(Air/img/bull.png)"] {
       filter: @accent-filter !important;
     }
+  }
 
+  .mixin-box() {
     .box, .path {
       background-color: @mantle !important;
       border-color: @overlay0 !important;
+    }
+
+    blockquote, .quotebox {
+      border-color: @accent !important;
+      border-style: none none none solid !important;
+
+      &, * {
+        background-color: @mantle !important;
+      }
+
+      &:hover, &:hover * {
+        background-color: @surface1 !important;
+      }
     }
   }
 
@@ -426,6 +441,7 @@
     --table-focus-bg-color: @surface0 !important;
 
     #mixins.mixin-base();
+    #mixins.mixin-box();
     #mixins.mixin-code();
     #mixins.mixin-inputs();
     #mixins.mixin-table();
@@ -862,6 +878,7 @@
       border-color: @overlay0 !important;
 
       #mixins.mixin-base();
+      #mixins.mixin-box();
       #mixins.mixin-code();
       #mixins.mixin-inputs();
       #mixins.mixin-table();
@@ -1024,6 +1041,8 @@
           }
 
           .inbox {
+            #mixins.mixin-box();
+
             .postbody, .postfoot.clearb {
               border: none !important;
             }
@@ -1035,15 +1054,6 @@
                 *:not(a) {
                   color: @teal !important;
                 }
-              }
-            }
-
-            .quotebox {
-              border-color: @surface2 !important;
-              border: solid none none none !important;
-
-              &, * {
-                background-color: @mantle !important;
               }
             }
 
