Add FIXME comment, gotta work on this next.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -32,6 +32,7 @@
       color: @subtext0 !important;
     }
 
+    // FIXME: This doesn't work yet, but I want to just apply filter to all span icons :]
     span[background-image="url(Air/img/bull.png)"] {
       filter: @accent-filter !important;
     }
@@ -49,6 +50,11 @@
 
       &, * {
         background-color: @mantle !important;
+      }
+
+      // This is necessary to fit style globally.
+      p {
+        margin-left: 10px;
       }
 
       &:hover, &:hover * {
