Add dl, dt, dd. This covers newslist on main menu. Welcoming testing/fixing on this, hover box AND alternating colours don't seem to match up with this yet unfortunately.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -247,6 +247,34 @@
         border-color: @overlay0 !important;
       }
     }
+
+    dl {
+      background-color: inherit !important;
+
+      &, * {
+        border-color: @overlay0 !important;
+      }
+
+      dt {
+        color: @peach !important;
+      }
+
+      dd {
+        color: @blue !important;
+
+        &:nth-child(odd) {
+          background-color: @surface0 !important;
+        }
+
+        &:nth-child(even) {
+          background-color: @base !important;
+        }
+
+        &:hover {
+          background-color: @surface2 !important;
+        }
+      }
+    }
   }
 
   .mixin-a() {
