fix(searxng): lavender instead of mauve for visited

--- a/styles/searxng/catppuccin.user.less
+++ b/styles/searxng/catppuccin.user.less
@@ -45,7 +45,7 @@
     --color-base-background: @base;
     --color-base-background-mobile: @base;
     --color-url-font: @blue;
-    --color-url-visited-font: @mauve;
+    --color-url-visited-font: @lavender;
     --color-header-background: @mantle;
     --color-header-border: @mantle;
     --color-footer-background: @mantle;
@@ -88,7 +88,7 @@
     --color-result-description-highlight-font: @text;
     --color-result-link-font: @blue;
     --color-result-link-font-highlight: @blue;
-    --color-result-link-visited-font: @mauve;
+    --color-result-link-visited-font: @lavender;
     --color-result-publishdate-font: @surface2;
     --color-result-engines-font: @surface2;
     --color-result-search-url-border: @surface2;
